# Takeout-Scout

./: .gitignore  DISCOVERY_TRACKING.md  METADATA_FEATURES.md  README.md  app.py  discoveries_index.json  pyproject.toml  requirements.txt  ts.py
takeout_scout/: __init__.py  constants.py  discovery.py  hashing.py  logging.py  metadata.py  models.py  scanner.py  sidecar.py  utils.py
takeouts_discovered/: photos_cStorz3_takeout-20190715T134005Z-002_a2ac6b7b7c32.takeout_scout
tests/: __init__.py  test_constants.py  test_discovery.py  test_hashing.py  test_metadata.py  test_models.py  test_scanner.py  test_sidecar.py  test_utils.py
