[project]
name = "takeout-scout"
version = "0.1.0"
description = "A lightweight GUI tool for scanning and analyzing Google Takeout archives"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Conrad", email = "conrad@example.com" }
]
keywords = ["google", "takeout", "backup", "scanner", "archive"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving",
    "Topic :: Utilities",
]

dependencies = []

[project.optional-dependencies]
logging = ["loguru>=0.7.0"]

[project.scripts]
takeout-scout = "ts:main"

[project.urls]
Homepage = "https://github.com/conradstorz/Takeout-Scout"
Repository = "https://github.com/conradstorz/Takeout-Scout"
Issues = "https://github.com/conradstorz/Takeout-Scout/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["."]
