[project]
name = "takeout-scout"
version = "0.2.0"
description = "A web-based tool for scanning and analyzing Google Takeout archives"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Conrad", email = "conrad@example.com" }
]
keywords = ["google", "takeout", "backup", "scanner", "archive", "streamlit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving",
    "Topic :: Utilities",
]

dependencies = [
    "streamlit>=1.50.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
logging = ["loguru>=0.7.0"]
tkinter = []  # For the legacy ts.py version

[project.scripts]
takeout-scout = "app:main"
takeout-scout-tk = "ts:main"

[project.urls]
Homepage = "https://github.com/conradstorz/Takeout-Scout"
Repository = "https://github.com/conradstorz/Takeout-Scout"
Issues = "https://github.com/conradstorz/Takeout-Scout/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["."]
